# ClaRTK

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  buf.gen.yaml  buf.yaml  compose.yaml  package.json  pyproject.toml  tsconfig.base.json  tsconfig.shared.json
.codex/: config.toml
.codex/agents/: cli_coordinator.toml  docs_researcher.toml  gnss_protocol_researcher.toml  hardware_rd_researcher.toml  implementation_worker.toml  presentation_packager.toml  repo_explorer.toml  ui_review_reviewer.toml  verification_runner.toml
apps/dashboard-web/: index.html  package.json  tsconfig.json
apps/dev-console-web/: index.html  package.json
apps/native/: app.json  index.js  metro.config.js  package.json  tsconfig.json
core/geo/: Cargo.toml
db/bootstrap/: 0000_create_logical_databases.sql
db/dev/: README.md
db/migrations/: 0001_init_runtime.sql  0002_init_dev.sql  0003_runtime_auth_preferences.sql  0004_dev_preference_suggestions.sql  0005_agent_task_queue.sql  0006_dev_console_preferences.sql  0007_hardware_inventory.sql  0008_ui_review.sql  0009_preview_lane.sql  0010_hardware_deployment.sql  0011_runtime_production_hardening.sql  0012_runtime_gateway_ingest_journal.sql  0013_runtime_gateway_raw_parse_kind.sql
db/runtime/: README.md
docs/adr/: ADR-001-repo-foundation.md  ADR-002-agent-operating-model.md  ADR-003-data-platform.md  ADR-004-single-postgres-dev-stack.md  ADR-005-operator-preference-profiles.md  ADR-006-proto-contract-authority.md  ADR-007-postgres-agent-coordination.md  ADR-008-development-interface-boundary.md  ADR-009-hardware-lab-governance.md  ADR-010-preview-lane-source-of-truth-and-sandbox-boundary.md  ADR-011-carousel-first-dev-console-interaction-model.md  ADR-012-hardware-deployment-interface.md  ADR-013-runtime-postgres-self-hosted-reliability-baseline.md
docs/architecture/: repo-map.md
docs/hardware/: index.md  inventory-policy.md
docs/operations/: agent-coordination.md  cli-coordinator-workflow.md  dev-console-carousel-workflow.md  dev-console-ui-review.md  development-preview-workflow.md  development-servers.md  hardware-bench-deployment.md  openai-docs-mcp-smoke-test-2026-03-25-transcript.md  openai-docs-mcp-smoke-test-2026-03-25.md  rd-reporting-and-presentation.md  runtime-postgres-production.md  user-preference-profiles.md
docs/plan/: roadmap.md
docs/presentations/: clartk-rd-update-2026-03-canva-brief.md  clartk-rd-update-2026-03.md  clartk-rd-update-2026-03.preview.json  index.md
docs/research/: agentic-rd-workspace-guidance-2026-03.md  heltec-wifi-lora32-v2-integration.md  navspark-binary-protocol-matrix.md  navspark-ns-raw-integration.md  postgres-agent-coordination.md  (+1 more)
scripts/: bootstrap-rtklib.sh  browser-runtime-lib.mjs  check-all.sh  check-sql.sh  dev-agent-memory-worker.sh  dev-agent-memory.sh  dev-api.sh  dev-bootstrap-auth.sh  dev-console-api.sh  dev-console.sh  dev-coordinator-status-db.py  dev-coordinator-status.mjs  dev-dashboard.sh  dev-db-backup.sh  dev-db-down.sh  dev-db-init.sh  dev-db-reset-hard.sh  dev-db-reset-soft.sh  dev-db-restore.sh  dev-db-smoke.sh  dev-db-up.sh  dev-gateway.sh  dev-hardware-bench-agent.sh  dev-port-bridge.mjs  dev-queue-rebalance.py  dev-status.sh  gateway_standin.py  generate-contracts.mjs  presentation-preview-analyze.mjs  presentation-preview-lib.mjs  presentation-preview-render.mjs  preview-analyze.mjs  preview-render.mjs  run-js-tests.mjs  runtime-db-basebackup.sh  runtime-db-bootstrap-roles.sh  runtime-db-configure-pitr.sh  runtime-db-enable-observability.sh  runtime-db-migrate.sh  runtime-db-observability-report.sh  (+9 more)
services/agent-memory/: pyproject.toml
services/agent-memory/src/agent_memory/: __init__.py  service.py  vision.py
services/agent-memory/src/clartk_agent_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
services/agent-memory/tests/: test_service.py
services/hardware-bench-agent/: pyproject.toml
services/hardware-bench-agent/src/hardware_bench_agent/: __init__.py  service.py
services/rtk-gateway/: Cargo.toml
services/rtk-gateway/src/: main.rs  navspark_session.rs
(+109 files in other folders)
