[project]
name = "clartk-agent-memory"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pgvector>=0.3.6",
  "psycopg[binary]>=3.2.6"
]

[project.scripts]
clartk-agent-memory = "agent_memory.service:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5"
]
vision = [
  "easyocr>=1.7.2",
  "onnxruntime-gpu>=1.24.4",
  "opencv-python-headless>=4.13.0.92",
  "scikit-image>=0.26.0",
  "transformers>=5.4.0"
]

[build-system]
requires = ["setuptools>=75.8.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
