[package]
name = "clartk-rtk-gateway"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.40", default-features = false, features = ["clock", "serde"] }
clartk-ns-raw = { path = "../../core/devices/ns-raw" }
clartk-nmea = { path = "../../core/transforms/nmea" }
clartk-px1122r = { path = "../../core/devices/px1122r" }
clartk-rtcm = { path = "../../core/transforms/rtcm" }
postgres = { version = "0.19.10", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde.workspace = true
serde_json = "1.0.140"
