[package]
name = "clartk-rtk-gateway"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
chrono = { version = "0.4.40", default-features = false, features = ["clock", "serde"] }
clartk-geo = { path = "../../core/geo" }
clartk-ns-raw = { path = "../../core/devices/ns-raw" }
clartk-nmea = { path = "../../core/transforms/nmea" }
clartk-px1122r = { path = "../../core/devices/px1122r" }
clartk-rtcm = { path = "../../core/transforms/rtcm" }
clartk-rtklib-bridge = { path = "../../core/solvers/rtklib-bridge" }
clartk-skytraq-venus8 = { path = "../../core/protocols/skytraq-venus8" }
postgres = { version = "0.19.10", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde.workspace = true
serde_json = "1.0.140"
serialport = { version = "4.8.1", default-features = false }
url = "2.5.7"
